# sopmod

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  go.mod  go.sum  main.sop  release-plz.toml  sop.mod
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
internal/compat/: compat.sop  compat_test.sop
internal/config/: config.sop  config_test.sop
internal/install/: install.sop
internal/paths/: paths.sop  paths_test.sop
internal/shim/: shim.sop
src/: compat.rs  config.rs  install.rs  lib.rs  main.rs  paths.rs
