[package]
name = "sopmod"
version = "0.1.2"
edition = "2024"
license = "BSD-3-Clause"
repository = "https://github.com/halcyonnouveau/sopmod"
description = "Soppo version manager"
keywords = ["go", "golang", "soppo", "version-manager"]
categories = ["development-tools"]

[[bin]]
name = "sopmod"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
console = "0.16"
dirs = "6.0"
flate2 = "1.1"
indicatif = "0.18"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
tar = "0.4"
tempfile = "3.23"
thiserror = "2.0"
toml = "0.9"
zip = "6.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
